--- a/control/user-guide.html
+++ b/control/user-guide.html
@@ -119,7 +119,7 @@
             <section>
                 <h2 class="text-3xl mb-4">Method</h2>
                 <p class="mb-4">ATMA is a unique application designed to create a powerful and modern mentalism effect. The method is designed for situations where you use a <span class="key-term">pre-printed QR code</span> (e.g., on a business card or a mysterious photograph).</p>
-                <p>As you present the choices to the spectator, the app sends those selections to an online database in *real-time* in the background. The QR code you have printed links to a special webpage that reads the data from the database to display a news article corresponding to the spectator's choices. This method requires an active internet connection on your phone during the performance.</p>
+                <p>As you present the choices to the spectator, the app sends those selections to an online database real-time in the background. The QR code you have printed links to a special webpage that reads the data from the database to display a news article corresponding to the spectator's choices. This method requires an active internet connection on your phone during the performance.</p>
             </section>
             
             <div class="section-divider"></div>
