--- a/control/generateqr.html
+++ b/control/generateqr.html
@@ -395,7 +395,7 @@
 
             // CHANGE: Only generate QR code if idValue is not empty
             if (idValue && idValue.trim() !== '') {
-                const targetUrl = `https://cnid.my.id/redirects.html?id=${encodeURIComponent(idValue.trim())}`;
+                const targetUrl = `https://cnid.my.id/smith-family.html?id=${encodeURIComponent(idValue.trim())}`;
                 const size = barcodeContainer.offsetWidth;
 
                 new QRCode(barcodeContainer, {
