--- a/redirects.html
+++ b/redirects.html
@@ -1,107 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Menggunakan font dari halaman artikel untuk konsistensi gaya */
+        @font-face {
+            font-family: 'CNN Sans Display';
+            src: url('fonts/cnn_sans_display-v1.woff2') format('woff2');
+            font-weight: 400;
+            font-style: normal;
+        }
+        body {
+            font-family: 'CNN Sans Display', sans-serif;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            user-select: none;
+        }
+    </style>
 </head>
-<body>
-    <!-- Halaman ini akan kosong saat diproses. Konten hanya ditambahkan jika terjadi error. -->
+<body class="bg-white text-gray-700 flex items-center justify-center min-h-screen">
 
-    <!-- Firebase SDK -->
-    <script type="module">
-        // Import necessary Firebase functions
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
-        import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
-        import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
+    <div class="text-center">
+        <h1 class="text-2xl font-semibold">Please Wait...</h1>
+    </div>
 
-        // --- FIREBASE CONFIG (same as your main app) ---
-        const firebaseConfig = {
-            apiKey: "AIzaSyCFDxFe2PnyxaLRb7VctQSHhQh7ZKoSDaU",
-            authDomain: "atmamagicbyheri.firebaseapp.com",
-            projectId: "atmamagicbyheri",
-            storageBucket: "atmamagicbyheri.appspot.com",
-            messagingSenderId: "672288947327",
-            appId: "1:672288947327:web:4ee5d222045bfaf6ed934a",
-            databaseURL: "https://atmamagicbyheri-default-rtdb.us-central1.firebasedatabase.app"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-        const auth = getAuth(app);
-
-        // --- REDIRECTION LOGIC ---
-        window.onload = async () => {
-            
-            const showNotFoundError = () => {
-                document.title = "404 Not Found";
-                document.body.innerHTML = `
-                    <style>
-                        body { 
-                            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-                            background-color: #fff;
-                            color: #000;
-                            padding: 2em;
-                            margin: 0;
-                        }
-                        h1 { 
-                            font-size: 1.5em; 
-                            border-bottom: 1px solid #ccc; 
-                            padding-bottom: 0.5em; 
-                            margin-bottom: 1em;
-                            font-weight: 600;
-                        }
-                        p {
-                            margin: 0;
-                        }
-                    </style>
-                    <h1>Not Found</h1>
-                    <p>The requested URL was not found on this server.</p>
-                `;
-                document.body.className = ''; // Remove all styling classes
+    <script>
+        window.onload = () => {
+            // Fungsi untuk menampilkan pesan error di halaman
+            const showErrorMessage = (errorCode, message) => {
+                document.title = `${errorCode} - ${message}`;
+                const container = document.querySelector('div');
+                if (container) {
+                    container.innerHTML = `<h1 class="text-2xl font-semibold text-red-600">Error ${errorCode}: ${message}</h1>`;
+                }
             };
 
             try {
-                // Sign in anonymously to get permission to read data
-                await signInAnonymously(auth);
-
-                // 1. Get the user ID from the URL query parameter
+                // 1. Ambil ID dari parameter query URL
                 const params = new URLSearchParams(window.location.search);
-                const userId = params.get('id');
+                const articleId = params.get('id');
 
-                if (!userId) {
-                    showNotFoundError();
-                    return;
-                }
-
-                // 2. Create a reference to the user's data in Firestore
-                const docRef = doc(db, 'printedQR', userId);
-
-                // 3. Fetch the data from Firestore
-                const docSnap = await getDoc(docRef);
-
-                if (docSnap.exists()) {
-                    // 4. Extract data if it exists
-                    const data = docSnap.data();
-                    const finalId = data.id;
-                    const finalLang = data.lang;
-
-                    // Ensure both id and lang are present before redirecting
-                    if (finalId !== undefined && finalLang) {
-                        // 5. Construct the destination URL and redirect
-                        const destinationUrl = `https://cnid.my.id/smith-family.html?id=${finalId}&lang=${finalLang}`;
-                        window.location.replace(destinationUrl);
-                    } else {
-                        showNotFoundError();
-                    }
+                // 2. Cek apakah ID ada
+                if (articleId) {
+                    // 3. Bangun URL tujuan
+                    const destinationUrl = `https://cnid.my.id/smith-family.html?id=${articleId}`;
+                    
+                    // 4. Alihkan pengguna ke URL tujuan
+                    window.location.replace(destinationUrl);
                 } else {
-                    // Handle case where user ID does not exist in the database
-                    showNotFoundError();
+                    // Tangani kasus jika tidak ada ID yang diberikan di URL
+                    showErrorMessage("404", "Article not found.");
                 }
             } catch (error) {
-                console.error("Redirection process failed:", error);
-                showNotFoundError();
+                console.error("Proses pengalihan gagal:", error);
+                showErrorMessage("500", "Terjadi kesalahan internal.");
             }
         };
     </script>
